<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jimei.k3wise_mobile.SaleOrderInfoFragment">

    <ScrollView
        android:id="@+id/sales_order_info_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/dividing_line"
            android:orientation="vertical"
            android:showDividers="middle"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:id="@+id/layout_sales_order_info_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/layout_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="购货单位"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_sales_order_info_client"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/bo_value"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_sales_order_info_shipping_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/layout_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="订单执行"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_sales_order_info_shipping_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/sales_order_info_shipping_type_name"
                    android:textColor="@color/bo_value"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_sales_order_info_pay_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/layout_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="结算方式"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_sales_order_info_pay_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/sales_order_info_pay_type_name"
                    android:textColor="@color/bo_value"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_sales_order_info_sale_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/layout_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="销售方式"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_sales_order_info_sale_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/sales_order_info_sale_type_name"
                    android:textColor="@color/bo_value"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="摘要"
                    android:textSize="18sp" />

                <AutoCompleteTextView
                    android:id="@+id/et_sales_order_info_remark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bo_value"
                    android:textSize="18sp"
                    android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="染费"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_sales_order_info_amount1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:inputType="numberDecimal"
                    android:textColor="@color/bo_value"
                    android:textSize="18sp"
                    android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="其他费用"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_sales_order_info_amount2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:inputType="numberDecimal"
                    android:textColor="@color/bo_value"
                    android:textSize="18sp"
                    android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="订金"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_sales_order_info_amount3"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:inputType="numberDecimal"
                    android:textColor="@color/bo_value"
                    android:textSize="18sp"
                    android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/btn_sales_order_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="提交订单"
                    android:textSize="18sp"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/sales_order_info_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:visibility="gone" />

</FrameLayout>
